Bug #47636 --> add methods to convert back and forth between a nsIDocShellLoadTypeInfo and a docshell load tye. Unify nsIURILoadCommand and nsIDocShellLoadType enums so they can be treated as the same type. This allows the uriloader to pass the correct load info from the docshell that originates the load over to the docshell that actually ends up loading the url. r=radha, sr=rpotts